WebCore/rendering/AutoTableLayout.h
@@ -62,7 +62,8 @@ protected:
             , maxWidth(0)
             , effMinWidth(0)
             , effMaxWidth(0)
-            , calcWidth(0) {}
+            , calcWidth(0)
+            , emptyCellsOnly(true) {}
         Length width;
         Length effWidth;
         int minWidth;
@@ -70,6 +71,7 @@ protected:
         int effMinWidth;
         int effMaxWidth;
         int calcWidth;
+        bool emptyCellsOnly;
     };
 
     Vector<Layout, 4> m_layoutStruct;
